# cks-exam-preparation

./: .gitignore
cluster-hardening/api-server-access/: README.md  api-server-access.yaml  secret-reader-rbac.yaml
cluster-hardening/app-armor/: README.md  k8s-deny-write  k8s-network-restricted  k8s-network-restricted-abi  restricted-network-pod.yaml  restricted-pod.yaml
cluster-hardening/dashboard/: README.md
cluster-hardening/etcd/: install.sh
cluster-hardening/gatekeeper/: README.md  gcr-allowed-repos-constraint-namespaced.yaml  install.sh
cluster-hardening/gvisor/: README.md  install.sh
cluster-hardening/mtls/: README.md
cluster-hardening/restricting-user-permissions/: README.md  create-user.sh  kind-config.yaml  list-configmaps-configmap-reader.yaml  list-namespaces-authenticated.yaml  (+2 more)
cluster-setup/: README.md
kubernetes-tools/: README.md  pyproject.toml
kubernetes-tools/src/kubernetes_agents/: debug_connectivity_agent.py  networkpolicy_agent.py  pod_agent.py  pod_connectivity_agent.py
kubernetes-tools/src/kubernetes_tools/: __init__.py  agent_tools.py  debug.py  networkpolicy.py  pods.py
kubernetes-tools/tests/: __init__.py  setup_test_environment.py  test_utils.py
kubernetes-tools/tests/integration/: test_networkpolicy.py
kubernetes-tools/tests/unit/: conftest.py
kubernetes-tools/tests/unit/kubernetes_agents/: test_debug_connectivity_agent.py  test_networkpolicy_agent.py  test_pod_agent.py  test_pod_connectivity_agent.py
kubernetes-tools/tests/unit/kubernetes_tools/: test_debug.py  test_networkpolicy.py  test_pods.py
(+33 files in other folders)
