[project]
name = "kubernetes-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tom1299", email = "tom1299@jeeatwork.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=35.0.0",
    "langchain>=1.2.7",
    "pip>=25.3",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
